--- a/src/main/java/com/marcusoliver/loan/tracker/PayLoan.form
+++ b/src/main/java/com/marcusoliver/loan/tracker/PayLoan.form
@@ -141,7 +141,7 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="7" rowCount="4">
                         <Column editable="true" title="Name" type="java.lang.Object"/>
-                        <Column editable="true" title="Original Amount" type="java.lang.Object"/>
+                        <Column editable="true" title="Amount Requested" type="java.lang.Object"/>
                         <Column editable="true" title="Start Date" type="java.lang.Object"/>
                         <Column editable="true" title="End Date/Paid " type="java.lang.Object"/>
                         <Column editable="true" title="Interest (%)" type="java.lang.Object"/>
