--- a/src/main/java/com/marcusoliver/loan/tracker/CustomerBalance.form
+++ b/src/main/java/com/marcusoliver/loan/tracker/CustomerBalance.form
@@ -6,7 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -139,7 +139,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="3"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="click on the first row to pay an amount"/>
+                <Property name="text" type="java.lang.String" value="Payment logs"/>
               </Properties>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -152,16 +152,22 @@
                 <Component class="javax.swing.JTable" name="jtblCustomerBalance">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="5" rowCount="0">
+                      <Table columnCount="6" rowCount="0">
+                        <Column editable="true" title="Log ID" type="java.lang.Object"/>
+                        <Column editable="true" title="Borrower ID" type="java.lang.Object"/>
                         <Column editable="true" title="Borrower&apos;s Name" type="java.lang.Object"/>
-                        <Column editable="true" title="Total Due" type="java.lang.Object"/>
                         <Column editable="true" title="Amount Paid" type="java.lang.Object"/>
-                        <Column editable="true" title="Balance Remaining" type="java.lang.Object"/>
                         <Column editable="true" title="Date of Payment" type="java.lang.Object"/>
+                        <Column editable="true" title="Remaining Balance" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
