--- a/src/main/java/com/marcusoliver/loan/tracker/PayLoan.form
+++ b/src/main/java/com/marcusoliver/loan/tracker/PayLoan.form
@@ -139,7 +139,8 @@
                 <Component class="javax.swing.JTable" name="jtblPayLoanTable">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="7" rowCount="4">
+                      <Table columnCount="8" rowCount="4">
+                        <Column editable="true" title="Borrower&apos;s ID" type="java.lang.Object"/>
                         <Column editable="true" title="Name" type="java.lang.Object"/>
                         <Column editable="true" title="Amount Requested" type="java.lang.Object"/>
                         <Column editable="true" title="Start Date" type="java.lang.Object"/>
@@ -151,6 +152,11 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
